--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-aiohttp==3.8.4
+aiohttp==3.9.3
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
 Brotli==1.0.9
-certifi==2023.5.7
+certifi==2024.2.2
 charset-normalizer==3.1.0
 click==8.1.3
 cmake==3.27.2
@@ -15,7 +15,7 @@ frozenlist==1.3.3
 fsspec==2023.6.0
 huggingface-hub==0.22.2
 idna==3.4
-Jinja2==3.1.2
+Jinja2==3.1.3
 joblib==1.2.0
 lit==16.0.6
 MarkupSafe==2.1.3
@@ -38,9 +38,9 @@ nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 openai==0.27.7
 packaging==23.1
-Pillow==9.5.0
+pillow==10.3.0
 pipreqs==0.4.13
-pycryptodomex==3.18.0
+pycryptodomex==3.20.0
 PyYAML==6.0.1
 regex==2023.5.5
 requests==2.31.0
@@ -55,7 +55,7 @@ transformers==4.39.3
 triton==2.0.0
 ttkbootstrap==1.10.1
 typing_extensions==4.7.1
-urllib3==2.0.2
+urllib3==2.2.1
 websockets==12.0
 webvtt-py==0.4.6
 yarg==0.1.9
